doc: update nebula-pyg-exp

--- a/layouts/partials/footer/custom.html
+++ b/layouts/partials/footer/custom.html
@@ -2,7 +2,7 @@
     background: linear-gradient(90deg, #ff7a18, #af002d, #319197);">
 
 <div style="text-align:center; margin: .75rem 0 1.5rem; opacity:.8;">
-    Made with ❤️ by Fengze · 2025
+    Made by Fengze · 2025
 </div>
 
 <style>
